[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://fonts/theme.tres" type="Theme" id=4]

[sub_resource type="InputEventAction" id=4]
action = "start_game"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=8]

[sub_resource type="InputEventAction" id=6]
action = "pause_game"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="HUD" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="ScoreLabel" type="Label" parent="Control"]
margin_left = 5.0
margin_top = 6.0
margin_right = 26.0
margin_bottom = 25.0
text = "0"

[node name="Message" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -39.0
margin_right = 160.0
margin_bottom = 20.0
text = "Game Title"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -54.0
margin_right = 72.0
margin_bottom = -16.0
shortcut = SubResource( 5 )
text = "Start"

[node name="PauseButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 8 )
shortcut = SubResource( 7 )
text = "||"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="pressed" from="Control/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Control/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
